add new enpoint for comments
